// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should render correctly with 7 items 1`] = `
<div>
  <ul
    class="StyledList-sc-2e1ekc-0 Hkot"
    role="list"
  >
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link0
        </span>
      </a>
    </li>
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link1
        </span>
      </a>
    </li>
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link2
        </span>
      </a>
    </li>
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link3
        </span>
      </a>
    </li>
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link4
        </span>
      </a>
    </li>
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link5
        </span>
      </a>
    </li>
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link6
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`List should render correctly with 8 items 1`] = `
<div>
  <ul
    class="StyledList-sc-2e1ekc-0 Hkot"
    role="list"
  >
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link0
        </span>
      </a>
    </li>
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link1
        </span>
      </a>
    </li>
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link2
        </span>
      </a>
    </li>
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link3
        </span>
      </a>
    </li>
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link4
        </span>
      </a>
    </li>
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link5
        </span>
      </a>
    </li>
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link6
        </span>
      </a>
    </li>
    <li
      class="StyledListItem-sc-2e1ekc-1 kUOQdM"
      role="listitem"
    >
      <a
        class="StyledLink-nhmg8j-0 dHbSzF"
        href="https://www.bbc.co.uk/news"
      >
        <span
          class="StyleLinkText-nhmg8j-1 fPnERB"
        >
          Link7
        </span>
      </a>
    </li>
  </ul>
</div>
`;
